# git-req

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  appveyor.yml  build.rs  cli-flags.yml  git-req  git-req-completion.bash
.github/: build.workflow
.github/workflows/: ci.yml  release.yml
ci/: before_deploy.ps1  before_deploy.sh  script.sh
docs/: index.html
pkg/aur/: PKGBUILD
pkg/brew/: git-req.rb
pkg/deb/: changelog  copyright  debcargo.toml
src/: cli.rs  git.rs  main.rs  remotes.rs
src/remotes/: github.rs  gitlab.rs  mod.rs
