[package]
name = "git-req"
version = "2.1.1-rc.2"
authors = ["Aru Sahni <aru@arusahni.net>"]
description = "Check out merge requests from your GitLab/GitHub hosted repos with ease!"
homepage = "https://arusahni.github.io/git-req/"
repository = "https://github.com/arusahni/git-req"
readme = "README.md"
keywords = ["git", "gitlab", "github"]
categories = ["command-line-utilities", "development-tools"]
license = "MIT"
edition = "2018"
exclude = ["ci/**/*", "docs/**/*", "appveyor.yml", ".travis.yml", "pkg/**/*"]
build = "build.rs"

[badges]
travis-ci = { repository = "arusahni/git-req" }
appveyor = { repository = "arusahni/git-req" }
is-it-maintained-issue-resolution = { repository = "arusahni/git-req" }
is-it-maintained-open-issues = { repository = "arusahni/git-req" }
maintenance = {status = "actively-developed"}

[dependencies]
lazy_static = "1.4.0"
regex = "0.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
git2 = {version = "0.7", default_features = false, features = []}
shellexpand = "1.0"
duct = "0.11.1"
env_logger = "0.6"
log = "0.4.6"
tabwriter = "1"
color-backtrace = "0.2"
colored = "1.8"
reqwest = {version = "0.9.9", default-features = false,  features = ['rustls-tls']}
yaml-rust = "0.3.5"  # Using the same version that clap pushes for type compatibility

[build-dependencies]
man = "0.3.0"
regex = "0.2"
yaml-rust = "0.4.3"

[dependencies.clap]
version = "~2.33"
features = ["yaml"]
