[package]
name = "git-req"
version = "2.4.1"
authors = ["Aru Sahni <aru@arusahni.net>"]
description = "Check out merge requests from your GitLab/GitHub hosted repos with ease!"
homepage = "https://arusahni.github.io/git-req/"
repository = "https://github.com/arusahni/git-req"
readme = "README.md"
keywords = ["git", "gitlab", "github"]
categories = ["command-line-utilities", "development-tools"]
license = "MIT"
edition = "2021"
exclude = ["ci/**/*", "docs/**/*", "appveyor.yml", ".travis.yml", "pkg/**/*"]
build = "build.rs"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1

[badges]
travis-ci = { repository = "arusahni/git-req" }
appveyor = { repository = "arusahni/git-req" }
is-it-maintained-issue-resolution = { repository = "arusahni/git-req" }
is-it-maintained-open-issues = { repository = "arusahni/git-req" }
maintenance = {status = "actively-developed"}

[dependencies]
lazy_static = "1.4.0"
regex = "1.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
git2 = {version = "0.7", default_features = false, features = []}
shellexpand = "1.0"
duct = "0.11.1"
env_logger = "0.6"
log = "0.4"
tabwriter = "1"
color-backtrace = "0.2"
colored = "1.8"
ureq = {version = "0.12.0", features = ["json"]}
yaml-rust = "0.3.5"  # Using the same version that clap pushes for type compatibility
git-url-parse = "0.3"
anyhow = "1.0"
logchop = "0.1"

[build-dependencies]
man = "0.3.0"
regex = "1.6"
yaml-rust = "0.4.5"

[dependencies.clap]
version = "~2.33"
features = ["yaml"]

[package.metadata.deb]
assets = [
  ["target/release/git-req", "usr/bin/", "755"],
  ["LICENSE-MIT", "usr/share/doc/git-req/", "644"],
  ["README.md", "usr/share/doc/git-req/README", "644"],
  # The man page is automatically generated by git-req's build process, so
  # this file isn't actually commited. Instead, to create a dpkg, either
  # create a deployment directory and copy the man page to it, or make a build
  # release.
  ["target/release/git-req.1", "usr/share/man/man1/git-req.1", "644"],
]
